--- a/docs/style.css
+++ b/docs/style.css
@@ -12,6 +12,7 @@ p {
   color: wheat;
   font-size: 1.2em;
 }
-image {
-  background-color: bisque;
+
+img {
+  background-color: rgba(201, 51, 51, 0.664);
 }
