--- a/docs/style.css
+++ b/docs/style.css
@@ -113,7 +113,7 @@ aside {
 }
 
 .profil section article h2 {
-  padding: 30% 0 15% 0;
+  padding: 30% 0 5% 0;
   color: grey;
   margin: auto;
   text-decoration: underline rgb(50, 139, 223);
@@ -178,32 +178,28 @@ aside {
   flex-direction: row;
   /* Aligne les éléments horizontalement */
   align-items: center;
+  justify-content: center;
   /* Centre les éléments verticalement */
   width: 90%;
   margin-bottom: 2em;
 }
 
 /* Style des articles */
-article {
+.parent {
   display: flex;
   /* Utilise Flexbox pour aligner les éléments horizontalement */
   flex-direction: column;
   /* Aligne les éléments verticalement */
   justify-content: space-around;
   /* Répartit l'espace entre les éléments */
-  align-items: stretch;
-  /* Étire les éléments horizontalement */
-  width: 50%;
+  width: 30%;
   background-color: blue;
   padding: 10px;
 }
 
-/* Style de la colonne latérale */
-aside {
-  width: 50%;
-}
 .contact .premier {
   text-align: center;
+  justify-content: center;
 }
 .contact h1 {
   text-transform: uppercase;
@@ -239,8 +235,28 @@ aside {
 
 .contact section .form {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: row;
+  margin: auto;
+  list-style-type: none;
 }
+.contact section div ul li a {
+  list-style-type: none;
+}
+.contact section .btncontact {
+  background-color: rgb(50, 139, 223);
+  color: white;
+  border: solid 1px rgb(50, 139, 223);
+  width: 5%;
+}
+.contact section .btncontact:hover {
+  background-color: white;
+  color: rgb(50, 139, 223);
+  border: solid 1px rgb(50, 139, 223);
+  width: 5%;
+}
+
 /*-----------FIN DE LA PAGE CONTACT-----------*/
 
 /*-----------DÉBUT TABLETTE-----------*/
